# euclidean_motion

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp  motion.cpp  motion.h  utils.cpp  utils.h
test/: CMakeLists.txt  dst.txt  motion_test.cpp  src.txt  utils_test.cpp
